flux/infrastructure/progressive-delivery/develop/namespace-linkerd-injection.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: develop
  annotations:
    linkerd.io/inject: enabled
